popular gifts alignment fix

--- a/app/assets/stylesheets/collection1.css
+++ b/app/assets/stylesheets/collection1.css
@@ -18,7 +18,7 @@
     background-image: -webkit-linear-gradient(top, #fcebd2, #fcebd2 40%, transparent 40%, transparent 40%);
     /* padding-left: 9%; */
     justify-content: center;
-    align-items: center;;
+    align-items: center;
     /* background-color: red; */
 }
 
