--- a/app/assets/stylesheets/collection2.css
+++ b/app/assets/stylesheets/collection2.css
@@ -8,7 +8,7 @@
     border-radius: 5%;
     max-width:70%;
     cursor: pointer;
-    margin: 0 0 0 20%;
+    margin: 0 0 0 0;
         /* object-fit:scale-down; */
     width:  300px;
     height: 200px;
@@ -37,6 +37,11 @@
     box-shadow: 0 0 10px #b8b8b8;
 }
 
+.square-cat-main {
+    /* background-color: green; */
+    /* width: 100%;
+    height: 100%; */
+}
 
 .square-category-text {
     -webkit-font-smoothing: antialiased;
@@ -44,8 +49,13 @@
     font-weight: 700;
     font-size: 28px;
     line-height: 36px;
-    margin: 4% 0 2% 4%;
+    margin: 4% 0 2% 0;
     cursor: pointer;
+
+    display: flex;
+    /* justify-content: left !important;
+    text-align: left !important; */
+    padding-left: 5%;
 }
 
 .square-category-description {
@@ -70,10 +80,21 @@
     display: flex;
     list-style: none;
     object-fit: cover;
+    justify-content: center;
+    padding-left: 5%;
 }
 
 .sub-square-categories {
 
+}
+
+.square-category-top {
+    align-items: flex-start;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
 }
 
 .small-square-category-text {
